# Fastapi-lms

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 41c7338ef417_moving_is_active_from_user_to_profile.py  5dc6ffad80c3_.py
api/: users.py
db/: config.py  db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
