[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Roronoazoro2702 <rajharshit2702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
